@@ -14,6 +14,7 @@ Features
 * Optional VM crash protection, via Native.setProtected(boolean)
 * Auto-convert WString[]
 * Provide library synchronization wrapper similar to Collections.synchronizedX
+* Support lookup of OSX framework libraries by name
 
 Bug Fixes
 * Avoid attempts to free native library if it failed to load (wmeissner)
